--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,16 +289,16 @@
     "    ans_list = []\n",
     "    dq = deque()\n",
     "    dq.append((start, 0))\n",
-    "    #print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
-    "    #print()   \n",
+    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
+    "    print()   \n",
     "    \n",
     "    while dq:\n",
     "        y, d = dq.popleft()\n",
-    "        #print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "        print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
     "        \n",
     "        if end == y:            \n",
     "            ans_list.append(d) \n",
-    "            #print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "            print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
     "            #return ans_list\n",
     "                   \n",
     "        nd = d + 1        \n",
@@ -306,50 +306,23 @@
     "            if not chk[y][v] and not chk[v][y]:\n",
     "                chk[y][v] = chk[v][y] = True            \n",
     "                dq.append((v, nd))\n",
-    "                #print(f\"dq : {dq}\")\n",
-    "        #print()\n",
+    "                print(f\"dq : {dq}\")\n",
+    "        print()\n",
     "    return min(ans_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start : 0,  end : 3,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (1, 2)])\n",
-      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [1]\n",
-      "y : 3,  d : 2,  ans_list : [1, 2]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [1, 2]\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,50 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (0, 2)])\n",
-      "dq : deque([(3, 1), (0, 2), (1, 2)])\n",
-      "dq : deque([(3, 1), (0, 2), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2)])\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2)])\n",
-      "dq : deque([(0, 2), (1, 2), (3, 2), (0, 2), (2, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3)])\n",
-      "dq : deque([(1, 2), (3, 2), (0, 2), (2, 2), (4, 2), (2, 3), (3, 3)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : []\n",
-      "y : 1,  d : 2,  ans_list : [2]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[2]"
+       "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bfs(0, 1)"
+    "bfs(1, 2)"
    ]
   },
   {
@@ -476,392 +421,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start : 0,  end : 1,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (1, 2)])\n",
-      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : []\n",
-      "y : 1,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 0,  end : 2,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "y : 2,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(3, 1), (1, 2)])\n",
-      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "start : 0,  end : 3,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (1, 2)])\n",
-      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [1]\n",
-      "y : 3,  d : 2,  ans_list : [1, 2]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [1, 2]\n",
-      "\n",
-      "start : 0,  end : 4,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (3, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(3, 1), (1, 2)])\n",
-      "dq : deque([(3, 1), (1, 2), (3, 2)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(1, 2), (3, 2), (4, 2)])\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : []\n",
-      "y : 4,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 1,  end : 0,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (3, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "y : 0,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(3, 2), (3, 3)])\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(3, 3), (4, 3)])\n",
-      "\n",
-      "y : 3,  d : 3,  ans_list : [2]\n",
-      "\n",
-      "y : 4,  d : 3,  ans_list : [2]\n",
-      "\n",
-      "start : 1,  end : 2,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "y : 2,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (3, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "dq : deque([(3, 2), (3, 3)])\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : [1]\n",
-      "dq : deque([(3, 3), (4, 3)])\n",
-      "\n",
-      "y : 3,  d : 3,  ans_list : [1]\n",
-      "\n",
-      "y : 4,  d : 3,  ans_list : [1]\n",
-      "\n",
-      "start : 1,  end : 3,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (3, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(3, 2), (3, 3)])\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : []\n",
-      "y : 3,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(3, 3), (4, 3)])\n",
-      "\n",
-      "y : 3,  d : 3,  ans_list : [2]\n",
-      "y : 3,  d : 3,  ans_list : [2, 3]\n",
-      "\n",
-      "y : 4,  d : 3,  ans_list : [2, 3]\n",
-      "\n",
-      "start : 1,  end : 4,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (3, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(3, 2), (3, 3)])\n",
-      "\n",
-      "y : 3,  d : 2,  ans_list : []\n",
-      "dq : deque([(3, 3), (4, 3)])\n",
-      "\n",
-      "y : 3,  d : 3,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 3,  ans_list : []\n",
-      "y : 4,  d : 3,  ans_list : [3]\n",
-      "\n",
-      "start : 2,  end : 0,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 2,  d : 0,  ans_list : []\n",
-      "dq : deque([(1, 1)])\n",
-      "dq : deque([(1, 1), (3, 1)])\n",
-      "\n",
-      "y : 1,  d : 1,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "y : 0,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 2,  end : 1,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 2,  d : 0,  ans_list : []\n",
-      "dq : deque([(1, 1)])\n",
-      "dq : deque([(1, 1), (3, 1)])\n",
-      "\n",
-      "y : 1,  d : 1,  ans_list : []\n",
-      "y : 1,  d : 1,  ans_list : [1]\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "start : 2,  end : 3,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 2,  d : 0,  ans_list : []\n",
-      "dq : deque([(1, 1)])\n",
-      "dq : deque([(1, 1), (3, 1)])\n",
-      "\n",
-      "y : 1,  d : 1,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "start : 2,  end : 4,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 2,  d : 0,  ans_list : []\n",
-      "dq : deque([(1, 1)])\n",
-      "dq : deque([(1, 1), (3, 1)])\n",
-      "\n",
-      "y : 1,  d : 1,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (4, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 2,  ans_list : []\n",
-      "y : 4,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 3,  end : 0,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (4, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(4, 1), (0, 2)])\n",
-      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
-      "\n",
-      "y : 4,  d : 1,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "y : 0,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 3,  end : 1,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (4, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(4, 1), (0, 2)])\n",
-      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
-      "\n",
-      "y : 4,  d : 1,  ans_list : []\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : []\n",
-      "y : 1,  d : 2,  ans_list : [2]\n",
-      "\n",
-      "start : 3,  end : 2,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (4, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "y : 2,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(4, 1), (0, 2)])\n",
-      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
-      "\n",
-      "y : 4,  d : 1,  ans_list : [1]\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "start : 3,  end : 4,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 3,  d : 0,  ans_list : []\n",
-      "dq : deque([(2, 1)])\n",
-      "dq : deque([(2, 1), (4, 1)])\n",
-      "\n",
-      "y : 2,  d : 1,  ans_list : []\n",
-      "dq : deque([(4, 1), (0, 2)])\n",
-      "dq : deque([(4, 1), (0, 2), (1, 2)])\n",
-      "\n",
-      "y : 4,  d : 1,  ans_list : []\n",
-      "y : 4,  d : 1,  ans_list : [1]\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "y : 1,  d : 2,  ans_list : [1]\n",
-      "\n",
-      "start : 4,  end : 0,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 0,  ans_list : []\n",
-      "dq : deque([(3, 1)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (2, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "y : 0,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(2, 2), (2, 3)])\n",
-      "\n",
-      "y : 2,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(2, 3), (1, 3)])\n",
-      "\n",
-      "y : 2,  d : 3,  ans_list : [2]\n",
-      "\n",
-      "y : 1,  d : 3,  ans_list : [2]\n",
-      "\n",
-      "start : 4,  end : 1,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 0,  ans_list : []\n",
-      "dq : deque([(3, 1)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (2, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(2, 2), (2, 3)])\n",
-      "\n",
-      "y : 2,  d : 2,  ans_list : []\n",
-      "dq : deque([(2, 3), (1, 3)])\n",
-      "\n",
-      "y : 2,  d : 3,  ans_list : []\n",
-      "\n",
-      "y : 1,  d : 3,  ans_list : []\n",
-      "y : 1,  d : 3,  ans_list : [3]\n",
-      "\n",
-      "start : 4,  end : 2,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 0,  ans_list : []\n",
-      "dq : deque([(3, 1)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (2, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : []\n",
-      "dq : deque([(2, 2), (2, 3)])\n",
-      "\n",
-      "y : 2,  d : 2,  ans_list : []\n",
-      "y : 2,  d : 2,  ans_list : [2]\n",
-      "dq : deque([(2, 3), (1, 3)])\n",
-      "\n",
-      "y : 2,  d : 3,  ans_list : [2]\n",
-      "y : 2,  d : 3,  ans_list : [2, 3]\n",
-      "\n",
-      "y : 1,  d : 3,  ans_list : [2, 3]\n",
-      "\n",
-      "start : 4,  end : 3,   d : 0,  ans_list : []\n",
-      "\n",
-      "y : 4,  d : 0,  ans_list : []\n",
-      "dq : deque([(3, 1)])\n",
-      "\n",
-      "y : 3,  d : 1,  ans_list : []\n",
-      "y : 3,  d : 1,  ans_list : [1]\n",
-      "dq : deque([(0, 2)])\n",
-      "dq : deque([(0, 2), (2, 2)])\n",
-      "\n",
-      "y : 0,  d : 2,  ans_list : [1]\n",
-      "dq : deque([(2, 2), (2, 3)])\n",
-      "\n",
-      "y : 2,  d : 2,  ans_list : [1]\n",
-      "dq : deque([(2, 3), (1, 3)])\n",
-      "\n",
-      "y : 2,  d : 3,  ans_list : [1]\n",
-      "\n",
-      "y : 1,  d : 3,  ans_list : [1]\n",
-      "\n",
       "[6, 8, 6, 6, 8]\n"
      ]
     },
@@ -871,7 +437,7 @@
        "1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +450,7 @@
     "    for j in range(5):\n",
     "        if j == i:\n",
     "            continue\n",
-    "        sum += bfs(i, j)[0]\n",
+    "        sum += bfs(i, j)\n",
     "    kevin.append(sum)\n",
     "    \n",
     "print(kevin)\n",
@@ -927,6 +493,86 @@
     "    \n",
     "print(kevin)\n",
     "kevin.index(min(kevin)) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kevin = []\n",
+    "\n",
+    "for i in range(5):\n",
+    "    sum = 0\n",
+    "    for j in range(5):\n",
+    "        if j == i:\n",
+    "            continue\n",
+    "        sum += bfs(i, j)[0]\n",
+    "    kevin.append(sum)\n",
+    "    \n",
+    "print(kevin)\n",
+    "kevin.index(min(kevin)) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1 1 2 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0, 1, 3, 4]:\n",
+    "    print(bfs(2, i), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : [2, 3]\n",
+      "1 : [2]\n",
+      "2 : [0, 1, 3]\n",
+      "3 : [0, 2, 4]\n",
+      "4 : [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in friends_dict.items():\n",
+    "    print(f\"{k} : {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(2, 0)"
    ]
   }
  ],
