--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,25 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'map' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[(\u001b[39m0\u001b[39m, i, j, \u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(arr[\u001b[39m0\u001b[39m]))] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[(\u001b[39m0\u001b[39m, i, j, \u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39;49m(arr[\u001b[39m0\u001b[39;49m]))] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'map' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '1', '1', '1', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '1', '1', '1', '1', '0', '0', '0']\n",
+      "['0', '0', '0', '1', '1', '1', '1', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '1', '1', '1', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "\n",
+      "[(0, 0, 0, False), (0, 0, 1, False), (0, 0, 2, False), (0, 0, 3, False), (0, 0, 4, False), (0, 0, 5, False), (0, 0, 6, False), (0, 0, 7, False), (0, 0, 8, False), (0, 0, 9, False)]\n",
+      "[(0, 1, 0, False), (0, 1, 1, False), (0, 1, 2, False), (0, 1, 3, False), (0, 1, 4, False), (0, 1, 5, False), (0, 1, 6, False), (0, 1, 7, False), (0, 1, 8, False), (0, 1, 9, False)]\n",
+      "[(0, 2, 0, False), (0, 2, 1, False), (0, 2, 2, False), (0, 2, 3, False), (0, 2, 4, False), (0, 2, 5, False), (0, 2, 6, False), (0, 2, 7, False), (0, 2, 8, False), (0, 2, 9, False)]\n",
+      "[(0, 3, 0, False), (0, 3, 1, False), (0, 3, 2, False), (0, 3, 3, False), (0, 3, 4, False), (0, 3, 5, False), (0, 3, 6, False), (0, 3, 7, False), (0, 3, 8, False), (0, 3, 9, False)]\n",
+      "[(0, 4, 0, False), (0, 4, 1, False), (0, 4, 2, False), (0, 4, 3, False), (0, 4, 4, False), (0, 4, 5, False), (0, 4, 6, False), (0, 4, 7, False), (0, 4, 8, False), (0, 4, 9, False)]\n",
+      "[(0, 5, 0, False), (0, 5, 1, False), (0, 5, 2, False), (0, 5, 3, False), (0, 5, 4, False), (0, 5, 5, False), (0, 5, 6, False), (0, 5, 7, False), (0, 5, 8, False), (0, 5, 9, False)]\n",
+      "[(0, 6, 0, False), (0, 6, 1, False), (0, 6, 2, False), (0, 6, 3, False), (0, 6, 4, False), (0, 6, 5, False), (0, 6, 6, False), (0, 6, 7, False), (0, 6, 8, False), (0, 6, 9, False)]\n",
+      "[(0, 7, 0, False), (0, 7, 1, False), (0, 7, 2, False), (0, 7, 3, False), (0, 7, 4, False), (0, 7, 5, False), (0, 7, 6, False), (0, 7, 7, False), (0, 7, 8, False), (0, 7, 9, False)]\n",
+      "[(0, 8, 0, False), (0, 8, 1, False), (0, 8, 2, False), (0, 8, 3, False), (0, 8, 4, False), (0, 8, 5, False), (0, 8, 6, False), (0, 8, 7, False), (0, 8, 8, False), (0, 8, 9, False)]\n",
+      "[(0, 9, 0, False), (0, 9, 1, False), (0, 9, 2, False), (0, 9, 3, False), (0, 9, 4, False), (0, 9, 5, False), (0, 9, 6, False), (0, 9, 7, False), (0, 9, 8, False), (0, 9, 9, False)]\n"
      ]
     }
    ],
    "source": [
     "arr = [input().split() for _ in range(10)]\n",
-    "dp = [[(0, i, j, False) for j in range(len(arr[0]))] for i in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
@@ -32,86 +47,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dp[\u001b[39m1\u001b[39;49m][\u001b[39m10\u001b[39;49m]\n",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "dp[1][10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "chk = [[False] * len(arr[0]) for _ in range(10)]\n",
-    "\n",
-    "for row in chk:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp = [[0] * len(arr[0]) for _ in range(10)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(arr[0])):\n",
-    "    if arr[0][i] == 1:\n",
-    "        dp[0][i] = 1"
+    "    if arr[0][i] == \"1\":\n",
+    "        dp[0][i][0] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(arr[\u001b[39m0\u001b[39m])):\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m arr[i][j] \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         dp[i][j][\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(dp[i][j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m], dp[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][j][\u001b[39m0\u001b[39m], dp[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m]) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 10):\n",
-    "    if arr[i][0] == 1:\n",
-    "        dp[i][0] = 1\n",
+    "    if arr[i][0] == \"1\":\n",
+    "        dp[i][0][0] = 1\n",
     "    for j in range(1, len(arr[0])):\n",
-    "        if arr[i][j] == 1:\n",
-    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1"
+    "        if arr[i][j] == \"1\":\n",
+    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1"
    ]
   },
   {
